theme/css/cgi_theme.css
body {
	margin: 0 auto;
	text-align: center;
	background-color: white;
}

#container-content {
	margin: 0 auto;
	text-align:left;
	width:900px;
	background-color:white;
	padding: 20px 0 20px 0;
}

#container-content-2 {

}

h1 {
	padding:0em 0px 0px 0px;
	margin:0px 0px 0.2em 0px;
	color:#2f2f2f;
	font-family:sans-serif;
	font-size:1.75em;
	font-weight:normal;
	line-height:1.1;
}

h2 {
	font-size:1.25em;
	font-family:sans-serif;
	font-weight:bold;
}

h3 {
        font-size:1.25em;
        font-family:sans-serif;
        font-weight:bold;

}

h4, p, li {
	font-family:Arial,sans-serif;
	font-weight:normal;
}

p, li {
	color: #000000;
	line-height: 1em;
	padding: 0.2em 0 0.9em
}

p a,
ul li a {
	color: #0f4a84;
}

.figure {
	text-align: center;
}
.caption {
	font-size: small;
}

.definition {
	font-style: italic;
	text-decoration: none;
	border-bottom: 1px dashed;
}

/*
*	Header
*/
#header {
	text-align:center;
}
#header > table {
	margin:0 auto;
	text-align:left;
	width:900px;
}
img#ga-logo {
	height:100px;
}
td#quote {
	font-size:1.5em;
	font-family:sans-serif;
}
#ga-colour-strip-container {
	width:100%;
}
#ga-colour-strip {
	height:10px;
	width:100%;
	background-color: #F0E78A;
}

/*
*	Footer
*/
#footer-container {
	text-align: center;
	background-color: #97771A;
	height:40px;
	padding:25px 0 0 0;
}
#footer-links {
	margin:0 auto;
	color: white;
	font-family: sans-serif;
	font-size: 0.8em;
	width:900px;
}

#footer-links a {
	color: white;
}

#footer-links a:hover {
	text-decoration:underline;
}

/*
*	Nav
*/
div#ga-nav {
	font-size: 1em;
	font-family:sans-serif;
	text-align:right;
	margin:20px 0 0 0;
}

div#ga-nav a {
	margin: 0 10px 0 10px;
	text-decoration:none;
	color:#2f2f2f;
}

div#ga-nav a:hover {
	text-decoration:underline;
}

